--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
     "redux": "^3.6.0",
+    "redux-logic": "^0.10.2",
     "redux-saga": "^0.14.1",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "rxjs": "^5.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
